force-app/main/default/objects/Grilla__c/Grilla__c.object-meta.xml
<CustomObject>
    <label>Grilla de Materias</label>
    <nameField>
        <displayFormat>GR-{0000}-{YY}</displayFormat>
        <label>Nombre de Grilla</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Grilla de Materias</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>