force-app/main/default/objects/Grilla__c/fields/Auxiliar__c.field-meta.xml
<CustomField>
    <fullName>Auxiliar__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Auxiliar</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.RecordTypeId</field>
            <operation>equals</operation>
            <value>Docente</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Grilla_Auxiliares</relationshipName>
    <type>Lookup</type>
</CustomField>