force-app/main/default/objects/Grilla__c/fields/cargaSemanal__c.field-meta.xml
<CustomField>
    <fullName>cargaSemanal__c</fullName>
    <label>Carga Semanal</label>
    <summarizedField>GrillaHorario__c.duracion__c</summarizedField>
    <summaryForeignKey>GrillaHorario__c.Grilla__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>