force-app/main/default/objects/Grilla__c/fields/Materia__c.field-meta.xml
<CustomField>
    <fullName>Materia__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Materia</label>
    <referenceTo>Materia__c</referenceTo>
    <relationshipName>Grilla_de_horarios</relationshipName>
    <type>Lookup</type>
</CustomField>