force-app/main/default/objects/Grilla__c/listViews/Todas.listView-meta.xml
<ListView>
    <fullName>Todas</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <label>Todas</label>
</ListView>